--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Footer from '../components/Footer.astro';
     <Features />
     <HowItWorks />
     <ComparisonTable />
-    <Pricing />
+    <!-- <Pricing /> -->
     <WaitlistForm />
   </main>
   <Footer />
